# arb-bot

./: .dockerignore  .gitignore  CHOICES.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  addresses.env  deployment-local.yaml  deployment.yaml  docker-compose.yml  monitoring.yaml  secrets.env.example  secrets.yaml
abis/: AerodromeFactory.json  AerodromeFactoryFees.json  AerodromePairFees.json  AerodromePool.json  AerodromeRouter.json  UniswapV4Quoter.json  UniswapV4StateView.json
scripts/: build.sh  deploy.sh
src/: bootstrap.rs  config.rs  lib.rs  main.rs  models.rs
src/chain/: across_fees.rs  aerodrome_client.rs  cex_client.rs  gas.rs  mod.rs  providers.rs  uniswap_v4_client.rs
src/engine/: mod.rs  optimizer.rs  pricing.rs  service.rs
src/math/: aerodrome_volatile.rs  mod.rs  uniswap_v4.rs
src/web/: dto.rs  mod.rs  routes.rs
tests/: across_fees_integration.rs  aerodrome_base_integration.rs  api_integration_test.rs  arbitrage_optimizer_integration.rs  arbitrage_optimizer_live_data.rs  blockchain_tests.rs  cex_tests.rs  uniswap_v4_mathematical_validation.rs  uniswap_v4_quoter_integration.rs
