[package]
name = "arrakis_arbitrage"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = []
test-utils = []

[dependencies]
# Web framework
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
url = "2.0"
eyre = "0.6"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Ethereum interaction
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy = { version = "0.1", features = ["rpc", "contract", "providers"] }

# Math and numerics
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rust_decimal = { version = "1.29", features = ["serde-with-float"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"

# Math for DEX calculations
primitive-types = "0.12"
hex = "0.4"
uint = "0.9"
bytes = "1.10.1"

[dev-dependencies]
tokio-test = "0.4"
